--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   height: 1080px;
   margin-right: auto;
   margin-left: auto;
-  background-image: url('sa-vs-romania.png');
+  background-image: url('sa-vs-romania.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
