--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   height: 1080px;
   margin-right: auto;
   margin-left: auto;
-  background-image: url('sa-vs-ireland.jpg');
+  background-image: url('sa-vs-tonga.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
